fixed alignment of table

--- a/src/components/Panel.css
+++ b/src/components/Panel.css
@@ -23,4 +23,5 @@
 
 .panel{
     width: 41.5em;
+    z-index: 1;
 }
